syntax = "proto3";
package msproject2;
option go_package = "./proto";

service UserService{
    rpc Create(CreateUserRequest) returns (SuccessResponse);
    rpc Read (SingleUserRequest) returns (UserProfileResponse);
    rpc Update(SingleUserRequest) returns (SuccessResponse);
    rpc Delete(SingleUserRequest) returns (SuccessResponse);

}
 message CreateUserRequest{
    string name=1;
    string email =2;
}
message SuccessResponse{
    string response =1;
}
message SingleUserRequest{
    string id =1;
}
message UserProfileResponse{
string id =1;
string name =2;
string email = 3;
}